# eng2-lab6

./: CMakeLists.txt
.github/workflows/: test.yml
tests/: Tests.cpp
